_hack/k8s/01-ns.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vega
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: clickhouse
---
apiVersion: v1
kind: Namespace
metadata:
  name: vm
