_hack/k8s/vega-agent.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: agent
  namespace: vega
spec:
  selector:
    matchLabels:
      app: vega-agent
  template:
    metadata:
      labels:
        app: vega-agent
        vega.app: vega.agent
        app.kubernetes.io/name: vega.agent
        app.kubernetes.io/part-of: vega
    spec:
      volumes:
        - name: tetragon
          hostPath:
            path: /var/run/tetragon
        - name: cilium
          hostPath:
            path: /var/run/cilium
      containers:
        - name: agent
          image: vega-agent
          imagePullPolicy: Never
          volumeMounts:
            - mountPath: /var/run/tetragon
              name: tetragon
            - mountPath: /var/run/cilium
              name: cilium
