_hack/k8s/vega-ingest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vega-ingest
  namespace: vega
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vega-ingest
  template:
    metadata:
      labels:
        app: vega-ingest
    spec:
      containers:
        - name: ingest
          image: vega-ingest
          imagePullPolicy: Never
