_hack/k8s/vega-ingest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingest
  namespace: vega
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vega-ingest
  template:
    metadata:
      labels:
        app: vega-ingest
        vega.app: vega.ingest
        app.kubernetes.io/name: vega.ingest
        app.kubernetes.io/part-of: vega
    spec:
      containers:
        - name: ingest
          image: vega-ingest
          imagePullPolicy: Never
