_hack/k8s/otel.yml
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: monitoring
  labels:
    app: opentelemetry
    component: otel-collector
spec:
  ports:
  - name: otlp-grpc # Default endpoint for OpenTelemetry gRPC receiver.
    port: 4317
    protocol: TCP
    targetPort: 4317
  - name: otlp-http # Default endpoint for OpenTelemetry HTTP receiver.
    port: 4318
    protocol: TCP
    targetPort: 4318
  - name: loki-grpc # Default endpoint for Loki gRPC receiver.
    port: 3500
    protocol: TCP
    targetPort: 3500
  - name: loki-http # Default endpoint for Loki HTTP receiver.
    port: 3600
    protocol: TCP
    targetPort: 3600
  - name: metrics # Default endpoint for querying metrics.
    port: 8888
  selector:
    component: otel-collector
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  namespace: monitoring
  labels:
    app: opentelemetry
    component: otel-collector
spec:
  selector:
    matchLabels:
      app: opentelemetry
      component: otel-collector
  minReadySeconds: 5
  progressDeadlineSeconds: 120
  replicas: 1
  template:
    metadata:
      labels:
        app: opentelemetry
        component: otel-collector
    spec:
      serviceAccountName: otel-collector-opentelemetry-collector
      automountServiceAccountToken: true
      containers:
      - command:
          - "/otelcol-contrib"
          - "--config=/conf/otel-collector-config.yaml"
        image: ghcr.io/open-telemetry/opentelemetry-collector-releases/opentelemetry-collector-contrib:latest
        name: otel-collector
        resources:
          limits:
            cpu: "2"
            memory: 2G
          requests:
            cpu: 200m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: health-check
        ports:
        - containerPort: 3500
          name: "loki-grpc"
        - containerPort: 3600
          name: "loki-http"
        - containerPort: 55679
          name: "zpages"
        - containerPort: 4317
          name: "otlp-grpc"
        - containerPort: 14250 # "jaeger-thrift-grpc"
        - containerPort: 14268 # "jaeger-http"
        - containerPort: 9411
          name: "zipkin"
        - containerPort: 8888
          name: "metrics"
        - containerPort: 13133
          name: "health-check"
        volumeMounts:
        - name: otel-collector-config-vol
          mountPath: /conf
      volumes:
        - configMap:
            name: otel-collector
            items:
              - key: config
                path: otel-collector-config.yaml
          name: otel-collector-config-vol
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: otel-agent
  namespace: monitoring
  labels:
    app: opentelemetry
    component: otel-agent
spec:
  selector:
    matchLabels:
      app: opentelemetry
      component: otel-agent
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: opentelemetry
        component: otel-agent
    spec:
      hostPID: true
      serviceAccountName: otel-collector-opentelemetry-collector
      automountServiceAccountToken: true
      tolerations:
        - effect: NoSchedule
          operator: Exists
        - effect: NoExecute
          operator: Exists
        - effect: NoExecute
          key: node.kubernetes.io/not-ready
          operator: Exists
        - effect: NoExecute
          key: node.kubernetes.io/unreachable
          operator: Exists
        - effect: NoSchedule
          key: node.kubernetes.io/disk-pressure
          operator: Exists
        - effect: NoSchedule
          key: node.kubernetes.io/memory-pressure
          operator: Exists
        - effect: NoSchedule
          key: node.kubernetes.io/pid-pressure
          operator: Exists
        - effect: NoSchedule
          key: node.kubernetes.io/unschedulable
          operator: Exists
        - effect: NoSchedule
          key: node.kubernetes.io/network-unavailable
          operator: Exists
      securityContext:
        runAsNonRoot: false
        runAsUser: 0
      containers:
        - command:
            - "/otelcol-contrib"
            - "--config=/conf/otel-collector-config.yaml"
          image: ghcr.io/open-telemetry/opentelemetry-collector-releases/opentelemetry-collector-contrib:latest
          name: otel-agent
          livenessProbe:
            httpGet:
              path: /
              port: health-check
          ports:
            - containerPort: 55679
              name: "zpages"
            - containerPort: 4317
              name: "otlp-grpc"
            - containerPort: 13133
              name: "health-check"
          securityContext:
            privileged: true
            runAsNonRoot: false
            runAsUser: 0
          resources:
            limits:
              cpu: "2"
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 512Mi
          volumeMounts:
            - name: otel-collector-config-vol
              mountPath: /conf
            - name: hostfs
              mountPath: /hostfs
              readOnly: true
              mountPropagation: HostToContainer
      volumes:
        - name: hostfs
          hostPath:
            path: /
        - configMap:
            name: otel-agent
            items:
              - key: config
                path: otel-collector-config.yaml
          name: otel-collector-config-vol
