_hack/k8s/simon.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: simon
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simon-client
  namespace: simon
spec:
  replicas: 3
  selector:
    matchLabels:
      vega.app: simon.client
  template:
    metadata:
      labels:
        vega.app: simon.client
        app.kubernetes.io/name: simon.client
        app.kubernetes.io/part-of: simon
    spec:
      containers:
        - name: client
          image: ghcr.io/go-faster/simon:0.7.0
          args: ["client"]
          resources:
            limits:
              cpu: 50m
              memory: 32Mi
            requests:
              cpu: 50m
              memory: 32Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simon-server
  namespace: simon
spec:
  replicas: 3
  selector:
    matchLabels:
      vega.app: simon.server
  template:
    metadata:
      labels:
        vega.app: simon.server
        app.kubernetes.io/name: simon.client
        app.kubernetes.io/part-of: simon
    spec:
      containers:
        - name: server
          image: ghcr.io/go-faster/simon:0.7.0
          args: ["server"]
          resources:
            limits:
              cpu: 50m
              memory: 32Mi
            requests:
              cpu: 50m
              memory: 32Mi
---
# service for simon-server
apiVersion: v1
kind: Service
metadata:
  name: simon-server
  namespace: simon
spec:
  selector:
    vega.app: simon.server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: "http"
