_hack/k8s/vega.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: vega
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vega-api
  template:
    metadata:
      labels:
        app: vega-api
        vega.app: vega.api
        app.kubernetes.io/name: vega.api
        app.kubernetes.io/part-of: vega
    spec:
      serviceAccountName: vega-sa
      containers:
        - name: api
          image: vega
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
# service for simon-server
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: vega
spec:
  selector:
    app: vega-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: "http"
