_hack/k8s/vm.operator.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: vm
    meta.helm.sh/release-namespace: vm
    service.cilium.io/global: "true"
  labels:
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/instance: cluster
    app.kubernetes.io/name: vminsert
  name: insert
  namespace: vm
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8480
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: vminsert
  sessionAffinity: None
  type: ClusterIP
